syntax = "proto3";
package mpProtoc;

option go_package = "./mpProtoc";


// The greeter service definition.
service MapReduceService {
  rpc keepAlive (WorkerState) returns (MasterRequest){};
  rpc NeedWorkInfo(WorkerNeed) returns (NeedProcessData);
  rpc GetMapWorkData(WorkerInfo) returns (stream MapData);
  rpc RecvMapReduceInfoToMaster(MapReduceInfo) returns (Result);
  rpc DownloadMapReduceApp(WorkerInfo) returns (stream Chunk);
}

message Chunk {
  bytes contents = 1;
}


message MapReduceInfo {
  repeated string dataPath = 1;
  string mapReduceAppPath = 2;
}

message Result {
  string result = 1;
}


message WorkerInfo {
  string IPAddress = 1;
}

message MapData {
  bytes data = 1;
}


message NeedProcessData {
  bytes data = 1;
  string localDataPosition = 2;
}

message WorkerNeed {
  int32 task = 1;
  string IPAddress = 2;
}

message WorkerState {
  int32 workerState = 1;
  string IPAddress = 2;
}

message MasterRequest {
  int32 workerTask = 1;
  int32 reduceTaskNumber = 2;
}
